# dependabot-generate

./: .goreleaser.yml  CHANGELOG.md  Dockerfile  Gemini.md  README.md  action.yml  entrypoint.sh  generate.py  go.mod  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-generate.yml  managed-pr.yml  managed-stale.yml  sync.yml  unmanaged-dependabot.yml  unmanaged-go.yml  unmanaged-goreleaser.yml
.pocket/: config.go  go.mod  go.sum
.tools/: go.mod  go.sum
cmd/dependabot-generate/: main.go  main_test.go
cmd/dependabot-generate/testdata/: additional_yaml.golden.yml  default.golden.yml
internal/generator/: config.go  generator_test.go  map.go  scanner.go
internal/generator/testdata/: monorepo.golden.yml  single_project.golden.yml
