[project]
name = "dependabot-generate"
version = "0.1.0"
description = "A tool to generate Dependabot configuration."
requires-python = ">=3.8"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "basedpyright>=1.29.5",
    "mypy>=1.14.1",
    "ruff>=0.12.2",
]
